Fix issues on mobile devices

--- a/src/css/color-picker.css
+++ b/src/css/color-picker.css
@@ -105,7 +105,7 @@
 }
 
 .color-picker .input .type {
-    width: 3.5em;
+    width: 4em;
     text-align: center;
     cursor: pointer;
     color: #c4c4c4;
